# kdb-fix-adaptor

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  config.h  package.sh
docker/centos/: Dockerfile
docker/ubuntu/: Dockerfile
docs/: CompilingAndInstalling.tex  FixSharedLibrary.tex  Introduction.tex  RevisionHistory.tex  TitlePage.tex  USAGE.md
docs/src/: CompanyOverview.tex  CompilingAndInstalling.tex  FixSharedLibrary.tex  Introduction.tex  Preamble.tex  RevisionHistory.tex  TitlePage.tex
include/aquaq/: .FixEngine.h.swp  FixEngine.h  FixSession.h  KdbConvert.h
include/quickfix/: Dictionary.h  Session.h
src/: .main.cxx.swp  FixEngine.cxx  a.out  config.h.in  main.cxx  run  run.q  run.sh
src/config/: acceptor-config.ini  fix.q  fixtabletags.q  initiator-config.ini
src/config/sessions/: sample.ini
src/config/spec/: FIX.4.2.xml  FIX42.xml  Makefile  Makefile.in
src/cpp/: FixEngine.cxx  config.h.in  main.cxx
src/python/: parseheader.py
src/q/: example.q  fix.q  fixenums.q
test/cpp/: main.cxx
test/q/: runtests.q  tests.csv
tests/: fix44.q  fixdef.csv  fixtest.q  runtests.sh  sample.csv  tags.q  unittest.csv
tests/sessions/: FIX42.ini  FIX43.ini  FIX44.ini  FIX50.ini  FIX50SP1.ini  FIX50SP2.ini  sample.ini
